# api

./: .env.dist  CHANGELOG.md  pyproject.toml
.github/workflows/: pytest.yml
src/: app.py  main.py
src/api/: __init__.py  errors.py
src/api/common_schemas/: constraints.py
src/api/v1/: __init__.py  dependencies.py  orders.py  reports.py  stocks.py  stop_sales.py
src/api/v2/: __init__.py  bearer.py  dependencies.py  reports.py  stop_sales.py
src/core/: config.py  exceptions.py
src/db/: cache.py  redis_db.py
src/endpoints/: __init__.py  ping.py  statistics.py  statistics_reports.py  stop_sales.py
src/endpoints/v1/: __init__.py  canceled_orders.py  cheated_orders.py  statistics.py  stocks.py  stop_sales.py
src/endpoints/v2/: __init__.py  reports.py  statistics.py  stop_sales.py
src/models/: __init__.py  cheated_orders.py  office_manager.py  private_dodo_api.py  public_dodo_api.py  requests.py  statistics.py  validators.py
src/repositories/: __init__.py  base.py  dependencies.py  office_manager.py
src/services/: calculations.py  convert_models.py  http_client_factories.py  parsers.py  periods.py  public_dodo_api.py  statistics.py
src/utils/: calculations.py  convert_models.py  exceptions.py  time_utils.py
src/v1/: exceptions.py  parsers.py
src/v2/: exceptions.py  periods.py
tests/: units.json
tests/api_responses/: orders_handover_time.json
tests/test_convert_models/: test_production.py
tests/test_parsers/: test_being_late_certificates_parser.py  test_delivery_work_partial_parser.py  test_stocks_balance_parser.py
(+113 files in other folders)
