[tool.poetry]
name = "dodo__api"
version = "0.1.0"
description = ""
authors = ["usbtypec1 <eldos.baktybekov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
httpx = "^0.23.0"
python-dotenv = "^0.20.0"
pandas = "^1.4.2"
lxml = "^4.9.0"
beautifulsoup4 = "^4.11.1"
html5lib = "^1.1"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src",
]