[tool.poetry]
name = "Goretsky Integration API Facade"
version = "0.1.0"
description = ""
authors = ["usbtypec1 <eldos.baktybekov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
httpx = "^0.23.3"
python-dotenv = "^0.21.1"
pandas = "^1.5.3"
lxml = "^4.9.0"
beautifulsoup4 = "^4.11.2"
html5lib = "^1.1"
pydantic = "^1.10.4"
uvicorn = "^0.20.0"
openpyxl = "^3.1.0"
fastapi-cache = {extras = ["redis"], version = "^0.1.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src",
]